Issue #693: Hide overflow on preference boxes.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Preferences.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Preferences.css
@@ -109,6 +109,7 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
     margin-bottom: 24px;
     margin-top: 8px;
     padding: 24px 40px;
+    overflow: hidden;
 }
 
 .Box button,
